# wellcome-ERL

./: README.md  alembic.ini  crud.py  db.py  main.py  models.py  query.py  requirements.txt
alembic/: env.py
alembic/versions/: 0cffe98964a1_add_user_education_experience.py  8a2ff368161c_add_foreign_keys.py
api/: main.py  pyproject.toml  schema.py
prompt/: Company-Introduction.txt  Content-Final-Review-Order.txt  Expertise-Of-The-Foreign-Workers.txt  Reasons-Cannot-Replace-With-Korean-Workers.txt  Reasons-For-Needing-Foreign-Workers.txt
